fixed alignment issues

--- a/terminals/src/css/Contact.css
+++ b/terminals/src/css/Contact.css
@@ -26,7 +26,7 @@ img {
     flex-direction: column;
     background-color: #323232;
     border-radius: 40px;
-    margin-top: 60vh;
+    margin-top: 10vh;
     width: 40vw;
     align-self: center;
     justify-content: center;
